fixes #8675: align horizontal form label and input

--- a/less/forms.less
+++ b/less/forms.less
@@ -406,7 +406,7 @@ select {
 // Horizontal forms are built on grid classes.
 
 .form-horizontal .control-label {
-  padding-top: 6px;
+  padding-top: 9px;
 }
 
 .form-horizontal {
